* Readme Updated. * Color in Projects and Languages updated.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -126,6 +126,11 @@ input, select, textarea {
 		font-weight: 700;
 	}
 
+	strong2, b {
+		color: #70c2f8;
+		font-weight: 700;
+	}
+
 	em, i {
 		font-style: italic;
 	}
