--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -84,7 +84,7 @@ input, select, textarea {
 
 	body {
 		background: #fff;
-	}
+		}
 
 		body.is-preload *, body.is-preload *:before, body.is-preload *:after {
 			-moz-animation: none !important;
@@ -118,6 +118,8 @@ input, select, textarea {
 
 		a:hover {
 			border-bottom-color: transparent;
+			transform: scale(1.2);
+			box-shadow: inset 40px 0 0 0 #f56e30;
 			color: #4acaa8 !important;
 		}
 
@@ -2065,6 +2067,7 @@ input, select, textarea {
 		border: 0;
 		display: inline-block;
 		position: relative;
+		/* filter: drop-shadow(10px 7px 10px #f56e30); */
 	}
 
 		.image[data-position] img {
