--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -134,6 +134,12 @@ input, select, textarea {
 		font-weight: 700;
 	}
 
+	strong3, b {
+		/* color: #70c2f8; */
+		color: rgb(0, 0, 0);
+		font-weight: 700;
+	}
+
 	em, i {
 		font-style: italic;
 	}
