--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2499,7 +2499,8 @@ input, select, textarea {
 		}
 
 		table thead {
-			border-bottom: solid 4px #e4e4e4;
+			/* border-bottom: solid 4px #e4e4e4; */
+			border-bottom: solid 4px #fa0101;
 		}
 
 		table tfoot {
@@ -2730,7 +2731,8 @@ input, select, textarea {
 		-ms-justify-content: space-between;
 		justify-content: space-between;
 		/* background: #4acaa8; */
-		background: #70c2f8;
+		/* background: #70c2f8; */
+		background: #010508;
 		color: #d2f2e9;
 		height: 100%;
 		overflow-y: auto;
@@ -2851,6 +2853,7 @@ input, select, textarea {
 
 	#wrapper {
 		background: #fff;
+		/* background: #ffffff; */
 		padding-right: 23em;
 	}
 
